--- a/YahooFinanceStockScraper.ipynb
+++ b/YahooFinanceStockScraper.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNtwNrtncSdbes+FgzxHiuA",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/arhamk01/YahooFinanceScapper/blob/main/YahooFinanceStockScraper.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -44,10 +56,40 @@
         "\n"
       ],
       "metadata": {
-        "id": "2XRgYtS9193S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2XRgYtS9193S",
+        "outputId": "f817fd7b-814a-4088-af07-3ba1edfeb60b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: yfinance in /usr/local/lib/python3.10/dist-packages (0.2.28)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
+            "Requirement already satisfied: numpy>=1.16.5 in /usr/local/lib/python3.10/dist-packages (from yfinance) (1.23.5)\n",
+            "Requirement already satisfied: requests>=2.31 in /usr/local/lib/python3.10/dist-packages (from yfinance) (2.31.0)\n",
+            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.10/dist-packages (from yfinance) (0.0.11)\n",
+            "Requirement already satisfied: lxml>=4.9.1 in /usr/local/lib/python3.10/dist-packages (from yfinance) (4.9.3)\n",
+            "Requirement already satisfied: appdirs>=1.4.4 in /usr/local/lib/python3.10/dist-packages (from yfinance) (1.4.4)\n",
+            "Requirement already satisfied: pytz>=2022.5 in /usr/local/lib/python3.10/dist-packages (from yfinance) (2023.3)\n",
+            "Requirement already satisfied: frozendict>=2.3.4 in /usr/local/lib/python3.10/dist-packages (from yfinance) (2.3.8)\n",
+            "Requirement already satisfied: beautifulsoup4>=4.11.1 in /usr/local/lib/python3.10/dist-packages (from yfinance) (4.11.2)\n",
+            "Requirement already satisfied: html5lib>=1.1 in /usr/local/lib/python3.10/dist-packages (from yfinance) (1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4>=4.11.1->yfinance) (2.4.1)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.10/dist-packages (from html5lib>=1.1->yfinance) (1.16.0)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from html5lib>=1.1->yfinance) (0.5.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31->yfinance) (3.2.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31->yfinance) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31->yfinance) (2.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.31->yfinance) (2023.7.22)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -62,12 +104,12 @@
       "cell_type": "code",
       "source": [
         "# Replace 'AMZN' with the stock symbol of the company you're interested in\n",
-        "stock_symbol = 'AMZN'\n"
+        "stock_symbol = 'INFY'\n"
       ],
       "metadata": {
         "id": "wC68ZzUe3HeI"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -97,7 +139,7 @@
       "metadata": {
         "id": "xcC8olX844tA"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -114,17 +156,29 @@
       "source": [
         "# Export data to an Excel file and save in Colab storage\n",
         "\n",
-        "excel_filename = \"/content/---.xlsx\"    #remove '---' and change file name here accordingly.\n",
+        "excel_filename = \"/content/infosys.xlsx\"    #remove '---' and change file name here accordingly.\n",
         "\n",
         "historical_data.to_excel(excel_filename, engine='openpyxl')\n",
         "\n",
         "print(f\"Data exported to {excel_filename}\")"
       ],
       "metadata": {
-        "id": "xuq1H-jf3MG2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xuq1H-jf3MG2",
+        "outputId": "5c0ac803-9b51-490c-e9ca-dde48943fac8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Data exported to /content/infosys.xlsx\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
